--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
                         <li class="nav-item has-child has-arrow "><a href="javascript:void(0)"
                                 class="font-cta font-semibold text-text-primary hover:text-primary transition-colors duration-300">PLACEMENT</a>
                             <ul class="submenu sub__style">
-                                <li><a href="academic.html">Director's Message</a></li>
-                                <li><a href="admission.html">Training And Placement Cell</a></li>
+                                <li><a href="directormsg.html">Director's Message</a></li>
+                                <li><a href="training&placement.html">Training And Placement Cell</a></li>
                                 <li><a href="academic-area.html">Placement Process</a></li>
                                 <li><a href="campus-life.html">Placement Track Record</a></li>
                                 <li><a href="scholarship.html">List Of Recruiters</a></li>
@@ -384,8 +384,8 @@
                         </div>
 
                         <ul class="mobile-submenu">
-                            <li><a href="academic.html">Director's Message</a></li>
-                            <li><a href="admission.html">Training And Placement Cell</a></li>
+                            <li><a href="directormsg.html">Director's Message</a></li>
+                            <li><a href="training&placement.html">Training And Placement Cell</a></li>
                             <li><a href="academic-area.html">Placement Process</a></li>
                             <li><a href="campus-life.html">Placement Track Record</a></li>
                             <li><a href="scholarship.html">List Of Recruiters</a></li>
