--- a/programs.html
+++ b/programs.html
@@ -158,20 +158,20 @@
                         <li class="nav-item has-child  has-arrow"> <a href="programs.html"
                                 class="font-cta font-semibold text-text-primary hover:text-primary transition-colors duration-300">PROGRAMS</a>
                             <ul class="submenu sub__style">
-                                <li><a href="academic.html">MBA</a></li>
-                                <li><a href="academic.html">MCA</a></li>
-                                <li><a href="academic.html">MCOM</a></li>
-                                <li><a href="academic.html">BBA</a></li>
-                                <li><a href="admission.html">BCA</a></li>
-                                <li><a href="academic-area.html">BCOM (Hons)</a></li>
-                                <li><a href="campus-life.html">B.A.Hons (Mass Comm.)</a></li>
+                                <li><a href="programs.html">MBA</a></li>
+                                <li><a href="programs.html">MCA</a></li>
+                                <li><a href="programs.html">MCOM</a></li>
+                                <li><a href="programs.html">BBA</a></li>
+                                <li><a href="programs.htmll">BCA</a></li>
+                                <li><a href="programs.html">BCOM (Hons)</a></li>
+                                <li><a href="programs.html">B.A.Hons (Mass Comm.)</a></li>
                             </ul>
                         </li>
                         <li class="nav-item has-child has-arrow "><a href="javascript:void(0)"
                                 class="font-cta font-semibold text-text-primary hover:text-primary transition-colors duration-300">PLACEMENT</a>
                             <ul class="submenu sub__style">
-                                <li><a href="academic.html">Director's Message</a></li>
-                                <li><a href="admission.html">Training And Placement Cell</a></li>
+                                <li><a href="directormsg.html">Director's Message</a></li>
+                                <li><a href="training&placement.html">Training And Placement Cell</a></li>
                                 <li><a href="academic-area.html">Placement Process</a></li>
                                 <li><a href="campus-life.html">Placement Track Record</a></li>
                                 <li><a href="scholarship.html">List Of Recruiters</a></li>
@@ -189,7 +189,7 @@
                         <li class="nav-item has-child has-arrow "><a href="javascript:void(0)"
                                 class="font-cta font-semibold text-text-primary hover:text-primary transition-colors duration-300">FACULTY</a>
                             <ul class="submenu sub__style">
-                                <li><a href="academic.html">Management and Commerce</a></li>
+                                <li><a href="faculty.html">Management and Commerce</a></li>
                                 <li><a href="admission.html">Computer Science</a></li>
                                 <li><a href="campus-life.html">Visiting Faculty Academic</a></li>
                                 <li><a href="scholarship.html">Visiting Faculty Industrial</a></li>
@@ -388,7 +388,7 @@
 
                         <ul class="mobile-submenu">
                             <li><a href="academic.html">Director's Message</a></li>
-                            <li><a href="admission.html">Training And Placement Cell</a></li>
+                            <li><a href="training&placement.html">Training And Placement Cell</a></li>
                             <li><a href="academic-area.html">Placement Process</a></li>
                             <li><a href="campus-life.html">Placement Track Record</a></li>
                             <li><a href="scholarship.html">List Of Recruiters</a></li>
