--- a/directormsg.html
+++ b/directormsg.html
@@ -171,7 +171,7 @@
                                 class="font-cta font-semibold text-text-primary hover:text-primary transition-colors duration-300">PLACEMENT</a>
                             <ul class="submenu sub__style">
                                 <li><a href="directormsg.html">Director's Message</a></li>
-                                <li><a href="admission.html">Training And Placement Cell</a></li>
+                                <li><a href="training&placement.html">Training And Placement Cell</a></li>
                                 <li><a href="academic-area.html">Placement Process</a></li>
                                 <li><a href="campus-life.html">Placement Track Record</a></li>
                                 <li><a href="scholarship.html">List Of Recruiters</a></li>
@@ -370,13 +370,13 @@
                             <span class="mobile-arrow"></span>
                         </div>
                         <ul class="mobile-submenu">
-                            <li><a href="academic.html">MBA</a></li>
-                            <li><a href="academic.html">MCA</a></li>
-                            <li><a href="academic.html">MCOM</a></li>
-                            <li><a href="academic.html">BBA</a></li>
-                            <li><a href="admission.html">BCA</a></li>
-                            <li><a href="academic-area.html">BCOM</a></li>
-                            <li><a href="campus-life.html">BA.HONS (Mass Comm.)</a></li>
+                            <li><a href="programs.html">MBA</a></li>
+                            <li><a href="programs.html">MCA</a></li>
+                            <li><a href="programs.html">MCOM</a></li>
+                            <li><a href="programs.html">BBA</a></li>
+                            <li><a href="programs.html">BCA</a></li>
+                            <li><a href="programs.html">BCOM</a></li>
+                            <li><a href="programs.html">BA.HONS (Mass Comm.)</a></li>
                         </ul>
                     </li>
 
@@ -387,8 +387,8 @@
                         </div>
 
                         <ul class="mobile-submenu">
-                            <li><a href="academic.html">Director's Message</a></li>
-                            <li><a href="admission.html">Training And Placement Cell</a></li>
+                            <li><a href="directormsg.html">Director's Message</a></li>
+                            <li><a href="training&placement.html">Training And Placement Cell</a></li>
                             <li><a href="academic-area.html">Placement Process</a></li>
                             <li><a href="campus-life.html">Placement Track Record</a></li>
                             <li><a href="scholarship.html">List Of Recruiters</a></li>
@@ -415,11 +415,11 @@
                             <span class="mobile-arrow"></span>
                         </div>
                         <ul class="mobile-submenu">
-                            <li><a href="academic.html">Management and Commerce</a></li>
-                            <li><a href="admission.html">Computer Science</a></li>
-                            <li><a href="academic-area.html">Visiting Faculty International</a></li>
-                            <li><a href="campus-life.html">Visiting Faculty Academic</a></li>
-                            <li><a href="scholarship.html">Visiting Faculty Industrial</a></li>
+                            <li><a href="faculty.html">Management and Commerce</a></li>
+                            <li><a href="faculty.html">Computer Science</a></li>
+                            <li><a href="faculty.html">Visiting Faculty International</a></li>
+                            <li><a href="faculty.html">Visiting Faculty Academic</a></li>
+                            <li><a href="faculty.html">Visiting Faculty Industrial</a></li>
                         </ul>
                     </li>
 
@@ -628,7 +628,8 @@
     <section class="about-section-5 py-5 left-pattern">
         <div class="container">
             <div class="directorSpeak">
-                <h2 class="text-4xl md:text-5xl font-headline font-bold color-blue pb-4 pt-3 text-center">Director Message</h2>
+                <h2 class="text-4xl md:text-5xl font-headline font-bold color-blue pb-4 pt-3 text-center">Director
+                    Message</h2>
                 <div class="row gy-lg-0 gy-4 align-items-center justify-content-center ">
                     <div class="col-lg-10 order-1 order-md-0">
                         <p class="heading">Dear Corporate Leaders,</p>
@@ -649,7 +650,7 @@
                     </div>
                     <div class="col-lg-2 order-0 order-md-1 d-flex justify-content-center ">
                         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRRouJwWAgdY-by6rO2ed4LrV9r05L_Ho98Jw&s"
-                            alt=""  style="border-radius: 10px;box-shadow: 0 10px 25px rgba(0,0,0,0.15);">
+                            alt="" style="border-radius: 10px;box-shadow: 0 10px 25px rgba(0,0,0,0.15);">
                     </div>
                     <div class="col-12 order-2">
 
@@ -673,7 +674,7 @@
 
                         </div>
                     </div>
-                   
+
                 </div>
             </div>
         </div>
