--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                         <li class="nav-item has-child has-arrow "><a href="javascript:void(0)"
                                 class="font-cta font-semibold text-text-primary hover:text-primary transition-colors duration-300">FACULTY</a>
                             <ul class="submenu sub__style">
-                                <li><a href="academic.html">Management and Commerce</a></li>
+                                <li><a href="faculty.html">Management and Commerce</a></li>
                                 <li><a href="admission.html">Computer Science</a></li>
                                 <li><a href="campus-life.html">Visiting Faculty Academic</a></li>
                                 <li><a href="scholarship.html">Visiting Faculty Industrial</a></li>
@@ -412,7 +412,7 @@
                             <span class="mobile-arrow"></span>
                         </div>
                         <ul class="mobile-submenu">
-                            <li><a href="academic.html">Management and Commerce</a></li>
+                            <li><a href="faculty.html">Management and Commerce</a></li>
                             <li><a href="admission.html">Computer Science</a></li>
                             <li><a href="academic-area.html">Visiting Faculty International</a></li>
                             <li><a href="campus-life.html">Visiting Faculty Academic</a></li>
