--- a/programs.html
+++ b/programs.html
@@ -370,13 +370,13 @@
                             <span class="mobile-arrow"></span>
                         </div>
                         <ul class="mobile-submenu">
-                            <li><a href="academic.html">MBA</a></li>
-                            <li><a href="academic.html">MCA</a></li>
-                            <li><a href="academic.html">MCOM</a></li>
-                            <li><a href="academic.html">BBA</a></li>
-                            <li><a href="admission.html">BCA</a></li>
-                            <li><a href="academic-area.html">BCOM</a></li>
-                            <li><a href="campus-life.html">BA.HONS (Mass Comm.)</a></li>
+                            <li><a href="programs.html">MBA</a></li>
+                            <li><a href="programs.html">MCA</a></li>
+                            <li><a href="programs.html">MCOM</a></li>
+                            <li><a href="programs.html">BBA</a></li>
+                            <li><a href="programs.html">BCA</a></li>
+                            <li><a href="programs.html">BCOM</a></li>
+                            <li><a href="programs.html">BA.HONS (Mass Comm.)</a></li>
                         </ul>
                     </li>
 
@@ -387,7 +387,7 @@
                         </div>
 
                         <ul class="mobile-submenu">
-                            <li><a href="academic.html">Director's Message</a></li>
+                            <li><a href="directormsg.html">Director's Message</a></li>
                             <li><a href="training&placement.html">Training And Placement Cell</a></li>
                             <li><a href="academic-area.html">Placement Process</a></li>
                             <li><a href="campus-life.html">Placement Track Record</a></li>
@@ -415,7 +415,7 @@
                             <span class="mobile-arrow"></span>
                         </div>
                         <ul class="mobile-submenu">
-                            <li><a href="academic.html">Management and Commerce</a></li>
+                            <li><a href="faculty.html">Management and Commerce</a></li>
                             <li><a href="admission.html">Computer Science</a></li>
                             <li><a href="academic-area.html">Visiting Faculty International</a></li>
                             <li><a href="campus-life.html">Visiting Faculty Academic</a></li>
