--- a/training&placement.html
+++ b/training&placement.html
@@ -415,7 +415,7 @@
                             <span class="mobile-arrow"></span>
                         </div>
                         <ul class="mobile-submenu">
-                            <li><a href="academic.html">Management and Commerce</a></li>
+                            <li><a href="faculty.html">Management and Commerce</a></li>
                             <li><a href="admission.html">Computer Science</a></li>
                             <li><a href="academic-area.html">Visiting Faculty International</a></li>
                             <li><a href="campus-life.html">Visiting Faculty Academic</a></li>
@@ -626,7 +626,7 @@
     <!-- End Pages Banner Area -->
 
     <!-- teacher's section -->
-    <section class="placementTeacher py-5" style="background-image: url('/public/images/hiringDrivesBg.svg');">
+    <section class="placementTeacher py-5 overflow-hidden" style="background-image: url('/public/images/hiringDrivesBg.svg');">
 
         <h2 class="text-4xl md:text-5xl font-headline font-bold color-blue pb-4 pt-3 text-center">Meet Our Training Placement Faculty</h2>
 
@@ -649,7 +649,6 @@
                                 Affairs.
                             </p>
                         </div>
-
                         <div class="faculty-image" data-aos="fade-left" data-aos-delay="500">
                             <img src="https://smsvaranasi.com/uploads/page_images/46102dktripathi.jpg" alt="">
                         </div>
