--- a/faculty.html
+++ b/faculty.html
@@ -387,8 +387,8 @@
                         </div>
 
                         <ul class="mobile-submenu">
-                            <li><a href="academic.html">Director's Message</a></li>
-                            <li><a href="admission.html">Training And Placement Cell</a></li>
+                            <li><a href="directormsg.html">Director's Message</a></li>
+                            <li><a href="training&placement.html">Training And Placement Cell</a></li>
                             <li><a href="academic-area.html">Placement Process</a></li>
                             <li><a href="campus-life.html">Placement Track Record</a></li>
                             <li><a href="scholarship.html">List Of Recruiters</a></li>
